--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@
 #org.gradle.parallel=true
 #org.gradle.configureondemand=true
 
-
+android.useAndroidX=true
 GROUP=com.zhouyou
 
 SITE_URL=https://github.com/zhou-you/EasySignSeekBar
