--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
+        <activity android:exported="true"
             android:name="com.zhouyou.samlpe.signseekbar.MainActivity"
             android:label="@string/app_name"
             >
