--- a/signseekbar/build.gradle
+++ b/signseekbar/build.gradle
@@ -2,12 +2,11 @@ apply plugin: 'com.android.library'
 
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.2"
+    compileSdk 33
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 27
+        minSdk 19
+        targetSdk 33
         versionCode 25
         versionName "1.0.8"
     }
@@ -21,9 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:27.0.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation("androidx.annotation:annotation:1.7.0")
+    implementation("androidx.appcompat:appcompat:1.6.1")
 }
-apply from: '../bintray.gradle'
 
 
